# Blue_gang

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  README.txt  default.json  default_positions.json  dependencies.json  docker-compose.yml  install_requirements.sh  main.cpp  requirements.txt  tg_bot.py
AI/: CMakeLists.txt
AI/AI/: AI.cpp  AI.h  CMakeLists.txt
bot/: main.py
engine/: CMakeLists.txt
engine/src/: board.cpp  figure.cpp  main.h
extra/: __init__.py
game/: ai.py  cmd_game.py  main.py  new_file_whith_library_chess.py  test.py
game/ai_for_chess/: ai.py  new_ai_chess.py
game/classes/: board.py  exception.py  figure.py  symbols.py
installers/windows/: load_files.sh  main.nsi
site/: Adapter.py  auth.py  bot.py  db.py  games.csv  multiplayer.py  server.py  task1.py  task2.py  task3.py  users.csv
site/configuration/: default_configuration.py
site/css/: board.css  error_page.css  figures.css  game_page.css  main.css  main_page.css  save_page.css  win_page.css
site/js/: chessNotation.js  clickHandler.js  connect.js  generateBoard.js  movement.js  saveHandler.js
site/static/css/: style.css  (+1 more)
site/templates/: account.html  chess_main.html  deleting_user.html  errorPage.html  gamePage.html  gamemode_choose.html  games_list.html  login.html  mainPage.html  mainpage_test.html  newgamePage.html  registration.html  savePage.html  tmp.html  usernamechange.html  winPage.html
super_chess/: app.py
super_chess/AI_for_chess/: AI_chess.py  documentation_AI_chess.txt  test.py
super_chess/classes/: board.py  exception.py  figure.py
(+2 files in other folders)
